Update c-doxygen.yml - Update html path

--- a/.github/workflows/c-doxygen.yml
+++ b/.github/workflows/c-doxygen.yml
@@ -28,4 +28,8 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: doxygen-docs
-        path: html/
+        path: docs/html/
+        if-no-files-found: warn
+        compression-level: 6
+        overwrite: false
+        include-hidden-files: false
